# ProteinTensor

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE_TEMPLATE.md  CONTRIBUTING.md  EVALUATION_AGREEMENT_TEMPLATE.md  LICENSE  README.md  SECURITY.md  benchmark_results.json  boltz_benchmark.py  paper.bib  paper.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml
benchmarks/: ASSEMBLY_RESULTS.md  DATALOADER_RESULTS.md  MODEL_HARNESS_RESULTS.md  MSA_RESULTS.md  RESULTS.md  SPARSE_PAIRS_RESULTS.md  assembly_benchmark.py  boltz_rtx5080.md  dataloader_harness.py  model_harness.py  msa_benchmark.py  run.py  sparse_pairs_benchmark.py
benchmarks/results/: 20260621T211037Z.json  assembly_20260702T210843Z.json  dataloader_20260709T171914Z.json  dataloader_20260709T172102Z.json  dataloader_20260709T172202Z.json  dataloader_20260709T172636Z.json  model_20260709T183405Z.json  model_20260709T183539Z.json  msa_20260702T201336Z.json  msa_20260702T203351Z.json  sparse_20260708T174039Z.json
docs/: API.md
proteintensor/: __init__.py  bonds.py  ccd.py  cli.py  dataset.py  embeddings.py  ligands.py  msa.py  pairs.py  reader.py  remote.py  schema.py  writer.py
proteintensor/adapters/: __init__.py  _common.py  alphafold3.py  boltz.py  chai.py  nesso.py  openfold.py
proteintensor/converters/: __init__.py  mmcif.py  sequence.py
tests/: test_adapters.py  test_ccd.py  test_convert_dir.py  test_dataset.py  test_embeddings.py  test_ligand_pocket.py  test_ligands.py  test_model_adapters.py  test_msa.py  test_nesso.py  test_nucleic.py  test_pairs.py  test_remote.py  test_roundtrip.py  test_sequence.py  test_sparse_pairs.py
