[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteintensor"
version = "0.1.0"
description = "AI-native biomolecular tensor format"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "zarr>=2.18,<3",
    "numcodecs>=0.12",
    "numpy>=1.24",
    "gemmi>=0.6",
    "click>=8.1",
    "rich>=13",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
jax  = ["jax>=0.4"]
dev  = ["pytest>=7", "pytest-benchmark", "pytest-cov"]

[project.scripts]
proteintensor = "proteintensor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["proteintensor*"]
